# kirin_npu_llm_app

./: readme.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: llm-inference-sequence.md
entry/src/main/cpp/: CMakeLists.txt  llm_demo.cpp
entry/src/main/cpp/include/: cann_llm_engine_context.h  cann_llm_engine_executor.h  hiai_llm_engine_loader.h  llm_engine_c_api_export.h  llm_engine_context_base.h  llm_engine_executor_base.h  llm_engine_return_types.h
entry/src/main/cpp/include/common/: lm_engine_model_info.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
